--- a/e-condent.html
+++ b/e-condent.html
@@ -173,7 +173,7 @@
            
         </div>
         <section id="header">
-            <a href="#"> <img src="images/l1.png " class="logo" > </a> 
+            <a href="https://gackarur.ac.in/"> <img src="images/l1.png " class="logo" > </a> 
            
             <div>
                 <ul id="navbar">
