--- a/exam.html
+++ b/exam.html
@@ -225,7 +225,7 @@
     </head>
     <body>
         <section id="header">
-            <a href="#"> <img src="images/l1.png " class="logo" > </a> 
+            <a href="https://gackarur.ac.in/"> <img src="images/l1.png " class="logo" > </a> 
            
             <div>
                 <ul id="navbar">
