--- a/computer.html
+++ b/computer.html
@@ -212,7 +212,7 @@
     </head>
     <body>
         <section id="header">
-            <a href="https://gackarur.ac.in/"> <img src="images/l1.png " class="logo" > </a> 
+            <a href="3"> <img src="images/l1.png " class="logo" > </a> 
            
             <div>
                 <ul id="navbar">
