--- a/e-condent.html
+++ b/e-condent.html
@@ -92,6 +92,11 @@
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 border-collapse: collapse;
                 width: 100%;
+                background-image: url(images/bg5.jpg);
+                background-size: cover;
+                background-position: top 20% right 0;
+                align-items: flex-start;
+                justify-content: center;
             }
             #table td, #table th{
                 border: 1px solid #ddd;
@@ -100,6 +105,29 @@
             #table tr:hover {background-color: #ddd;}
 
             #table th {
+                padding-top: 12px;
+                padding-bottom: 12px;
+                text-align: left;
+                background-color: #04AA6D;
+                color: white;
+            }
+            #table1 {
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+                background-image: url(images/bg4.jpg);
+                background-size: cover;
+                background-position: top 20% right 0;
+                align-items: flex-start;
+                justify-content: center;
+            }
+            #table1 td, #table1 th{
+                border: 1px solid #ddd;
+                padding: 8px;
+            }
+            #table1 tr:hover {background-color: #ddd;}
+
+            #table1 th {
                 padding-top: 12px;
                 padding-bottom: 12px;
                 text-align: left;
@@ -193,7 +221,7 @@
             <h1><strong>UG </strong>  Course Syllabus..</h1>
         </div><br>
 
-        <table id="table">
+        <table id="table1">
             <tr>
                 <th>#</th>
                 <th>Department</th>
