--- a/exam.html
+++ b/exam.html
@@ -87,6 +87,7 @@
                 box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
                  background: #E3E6F3;
                  position: sticky;
+                 
                  top: 0;
                  left: 0;
                  animation-name: demo;
@@ -111,6 +112,11 @@
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 border-collapse: collapse;
                 width: 100%;
+                background-image: url(images/bg3.jpg);
+                background-size: cover;
+                background-position: top 20% right 0;
+                align-items: flex-start;
+                justify-content: center;
             }
             #table td, #table th{
                 border: 1px solid #ddd;
@@ -143,6 +149,11 @@
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 border-collapse: collapse;
                 width: 100%;
+                background-image: url(images/bg1.jpg);
+                background-size: cover;
+                background-position: top 20% right 0;
+                align-items: flex-start;
+                justify-content: center;
             }
             #post td, #post th{
                 border: 1px solid #ddd;
