--- a/face.html
+++ b/face.html
@@ -102,6 +102,17 @@
             #moon strong{
                 color: cadetblue;
             }
+            #write {
+                background-image: url(images/bg11.jpg);
+                background-size: cover;
+                background-position: top 20% right 0;
+                align-items: flex-start;
+                justify-content: center;
+                color: #Eec808;
+            }
+           
+            
+
             #write h1{
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 text-align: center;
@@ -119,7 +130,7 @@
             #write ul li{
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 20px;
-                color: black;
+                color:black
             }
             footer{
                 display: flex;
